# grimmcraft__town

./: .gitignore  README.md  Taskfile.yaml  codebook.toml  config.yaml  pyproject.toml
_datapacks/: Grimmoire.md  Taskfile.yaml
_datapacks/falron/: pack.mcmeta
_datapacks/falron/data/falron/function/: debug_off.mcfunction  debug_on.mcfunction  init.mcfunction  summon_breeze_archer.mcfunction  tick.mcfunction
_datapacks/falron/data/falron/function/clock/: hour.mcfunction  minute.mcfunction  reset.mcfunction
_datapacks/falron/data/falron/function/debug/: off.mcfunction
_datapacks/falron/data/falron/function/entity/: bomba.mcfunction  bonearcher.mcfunction  falron_boss.mcfunction  ghostling.mcfunction  ghostling_breeze.mcfunction  ghostling_rider.mcfunction  intoxicated_adventurer.mcfunction  intoxicated_sniper.mcfunction  scorching_flame.mcfunction  skull_allay.mcfunction  sniper_tower.mcfunction  wind_charge_strike.mcfunction  windy_archer.mcfunction  windy_overseer.mcfunction
_datapacks/falron/data/falron/function/title/: goon.mcfunction
_datapacks/falron/data/minecraft/tags/function/: load.json  tick.json
_templates/: README.md
_templates/datapack__1.21.11/{{name}}/: pack.mcmeta
_templates/datapack__1.21.11/{{name}}/data/minecraft/tags/function/: load.json
_templates/datapack__fireworks/fireworks/data/: mc__generate__rockets.py
_templates/datapack__fireworks/fireworks/data/fireworks/function/: rocket_blue_ball.mcfunction  rocket_blue_creeper_3.mcfunction  rocket_blue_sparkler_2.mcfunction  rocket_blue_star_1.mcfunction  rocket_cyan_ball_1.mcfunction  rocket_cyan_burst_1.mcfunction  rocket_cyan_burst_3.mcfunction  rocket_cyan_star_2.mcfunction  rocket_green_sparkler_2.mcfunction  rocket_light_blue_burst_1.mcfunction  rocket_light_blue_creeper_2.mcfunction  rocket_light_blue_creeper_3.mcfunction  rocket_light_blue_star_1.mcfunction  rocket_light_blue_star_3.mcfunction  rocket_orange_ball_1.mcfunction  rocket_orange_burst_1.mcfunction  rocket_orange_burst_3.mcfunction  rocket_orange_creeper_2.mcfunction  rocket_pink_ball_3.mcfunction  rocket_pink_creeper_1.mcfunction  rocket_pink_star_2.mcfunction  rocket_pink_star_3.mcfunction  rocket_purple_ball_2.mcfunction  rocket_purple_burst_2.mcfunction  rocket_purple_burst_3.mcfunction  rocket_purple_creeper_1.mcfunction  rocket_purple_star_1.mcfunction  rocket_purple_star_2.mcfunction  rocket_red_ball_2.mcfunction  rocket_red_ball_3.mcfunction  rocket_red_star_2.mcfunction  rocket_white_ball_1.mcfunction  rocket_yellow_burst_2.mcfunction  rocket_yellow_sparkler_3.mcfunction  timer_blue_burst_3.mcfunction  timer_blue_creeper_3.mcfunction  timer_blue_star_2.mcfunction  timer_cyan_ball_1.mcfunction  timer_cyan_creeper_2.mcfunction  timer_green_burst_1.mcfunction  (+20 more)
_templates/datapack__fireworks/fireworks/data/minecraft/tags/function/: rocket_blue_burst_1.json  rocket_blue_burst_3.json  rocket_blue_creeper_3.json  rocket_cyan_ball_1.json  rocket_cyan_burst_1.json  rocket_green_ball_2.json  rocket_light_blue_burst_2.json  rocket_light_blue_sparkler_1.json  rocket_light_blue_star_1.json  rocket_orange_ball_1.json  rocket_orange_star_1.json  rocket_orange_star_3.json  rocket_pink_creeper_1.json  rocket_pink_creeper_2.json  rocket_pink_sparkler_3.json  rocket_pink_star_1.json  rocket_pink_star_2.json  rocket_purple_burst_2.json  rocket_purple_creeper_1.json  rocket_purple_sparkler_1.json  rocket_red_star_1.json  rocket_red_star_2.json  rocket_white_ball_1.json  rocket_white_burst_2.json  rocket_yellow_ball_2.json  rocket_yellow_burst_1.json  rocket_yellow_creeper_3.json  rocket_yellow_sparkler_3.json  sheep.json  timer_blue_burst_1.json  timer_blue_creeper_2.json  timer_blue_star_3.json  timer_cyan_ball_1.json  timer_cyan_sparkler_2.json  timer_cyan_star_1.json  timer_green_creeper_3.json  timer_green_sparkler_2.json  timer_light_blue_ball_1.json  timer_light_blue_creeper_2.json  timer_light_blue_creeper_3.json  (+26 more)
apps/alchemist/: Taskfile.yaml  pyproject.toml
apps/alchemist/src/alchemist/: __init__.py  cli.py
apps/alchemist/tests/: test_alchemist.py
apps/blacksmith/: Taskfile.yaml  pyproject.toml
apps/blacksmith/src/blacksmith/: __init__.py  cli.py  core.py
apps/blacksmith/tests/: test_forge.py
apps/carpenter/: .gitignore  README.md  Taskfile.yaml  go.mod  main.go  scaffold.go  scaffold_test.go
apps/guard/: Taskfile.yaml  pyproject.toml
apps/guard/src/guard/: __init__.py  aternos.py  aternos_files.py  cli.py  core.py  docs.py
apps/scout/: Taskfile.yaml  pyproject.toml
apps/scout/src/scout/: __init__.py  cli.py  core.py  report.py
apps/scout/tests/: test_scout.py
apps/town/: Taskfile.yaml  pyproject.toml
apps/town/src/town/: __init__.py  app.py  tasks.py  terminal.py
apps/town/tests/: test_terminal.py
