[project]
name = "grimmcraft-town"
version = "2026.1.0"
description = "GrimmCraft Town — a Minecraft learners' toolkit monorepo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "filesystem",
    "minecraft",
    "guard",
    "scout",
    "blacksmith",
    "town",
]

# The repository root is a *virtual* workspace: it is not built or published,
# it only ties the member packages together so `uv sync` installs them all.
[dependency-groups]
dev = [
    "pytest>=8",
    "pyftpdlib>=1.5",  # local FTP server for exercising guard's download path
]

[tool.pytest.ini_options]
testpaths = ["packages/filesystem/tests", "packages/minecraft/tests", "apps/scout/tests", "apps/blacksmith/tests", "apps/town/tests"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/*"]
exclude = ["apps/carpenter"]  # carpenter is a Go program, not a Python package

[tool.uv.sources]
filesystem = { workspace = true }
minecraft = { workspace = true }
guard = { workspace = true }
scout = { workspace = true }
blacksmith = { workspace = true }
town = { workspace = true }

[tool.pyright]
# The workspace packages are installed *editable*, but uv marks its editable
# `.pth` files hidden on macOS and uses an import-based finder Pyright can't
# execute — so the language server can't follow them. Point it straight at each
# package's `src`, mirroring the runtime PYTHONPATH, so imports like
# `filesystem.config` resolve in the editor.
extraPaths = [
    "packages/filesystem/src",
    "packages/minecraft/src",
    "apps/guard/src",
    "apps/scout/src",
    "apps/blacksmith/src",
    "apps/town/src",
    "apps/alchemist/src",
]
