[project]
name = "alchemist"
version = "2026.1.0"
description = "working with the version contol system"
requires-python = ">=3.11"
dependencies = [
    "filesystem",
]

[project.scripts]
alchemist = "alchemist.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alchemist"]

[tool.uv.sources]
filesystem = { workspace = true }
