[project]
name = "blacksmith"
version = "2026.1.0"
description = "Blacksmith — build functions in datapacks (stub; spec later)"
requires-python = ">=3.11"
dependencies = [
    "filesystem",
    "minecraft",
]

[project.scripts]
blacksmith = "blacksmith.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blacksmith"]

[tool.uv.sources]
minecraft = { workspace = true }
filesystem = { workspace = true }
