[project]
name = "guard"
version = "2026.1.0"
description = "Guard — back up, restore and document Minecraft worlds"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "filesystem",
    "lxml>=6.1.1",
    "python-aternos>=3.0.0",
]

[project.scripts]
guard = "guard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guard"]

[tool.uv.sources]
filesystem = { workspace = true }
