[project]
name = "scout"
version = "2026.1.0"
description = "Scout — read world data, especially command blocks (stub; spec later)"
requires-python = ">=3.11"
dependencies = [
    "filesystem",
]

[project.scripts]
scout = "scout.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scout"]

[tool.uv.sources]
filesystem = { workspace = true }
