[project]
name = "town"
version = "2026.1.0"
description = "Town — a NiceGUI browser frontend that drives the GrimmCraft Town tools"
requires-python = ">=3.11"
dependencies = [
    "filesystem",
    "nicegui>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
town = "town.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/town"]

[tool.uv.sources]
filesystem = { workspace = true }
